@@ -19,6 +19,10 @@ All (GUI):
 - Add wxHtmlWindow::SetDefaultHTMLCursor() (Jeff A. Marr).
 - Add default ctor and Create() to wxContextHelpButton (Hanmac).
 
+wxGTK:
+
+- Support building wxGTK3 under Windows (Kolya Kosenko).
+
 wxMSW:
 
 - Make wxFILTER_INCLUDE_LIST in wxTextValidator actually usable.
